--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "events": "^3.3.0",
     "fast-text-encoding": "^1.0.6",
-    "msw": "^0.0.0-fetch.rc-23",
+    "msw": "^2.0.5",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-url-polyfill": "^2.0.0"
