--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "events": "^3.3.0",
     "fast-text-encoding": "^1.0.6",
-    "msw": "^2.0.5",
+    "msw": "^2.1.6",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-url-polyfill": "^2.0.0"
@@ -31,6 +32,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.8",
+    "patch-package": "^8.0.0",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
